[package]
name = "ros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7"
lazy_static = { version = "1", features = ["spin_no_std"] }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs/" }
linked_list_allocator = "0.9.1"
riscv = "0.7.0"
byteorder = { version = "1.4.3", default-features = false }

[workspace]
members = ['xtask', '']
default-members = ['xtask', '']
