[package]
name = "ros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7"
lazy_static = { version = "1", features = ["spin_no_std"] }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs/" }
buddy_system_allocator = { version="0.8.0", features = ["use_spin"] }
riscv = "0.7.0"
once_cell = {version = "1.10.0", features = ['alloc'], default_features = false}
xalloc = { git = "https://github.com/leoleoasd/xalloc-rs/", default_features = false}

[workspace]
members = ['xtask', '']
default-members = ['xtask', '']
